@@ -1,3 +1,7 @@
+Dec 18, 2002
+
+  * FIXED: make all socket calls resume on EINTR (Unix systems).
+
 Dec 7, 2002
 
   * FIXED: hand open sockets to other threads (blocking problems in Windows).
